--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,35 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg">
-    <div class="navbar-nav">
-      <strong><a class="nav-link" routerLink="books">Book List</a></strong>
-      <strong><a class="nav-link" routerLink="addBook">Add Book </a></strong>
-    </div>
-  </nav>
-  <br>
+<!DOCTYPE html>
+<html lang="en">
 
-  <router-outlet />
-</div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cool Navbar</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+</head>
+
+<body>
+
+  <div class="container">
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">Book Library</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav ms-auto">
+          <strong><a class="nav-link" routerLink="books">Book List</a></strong>
+          <strong><a class="nav-link" routerLink="addBook">Add Book</a></strong>
+        </div>
+      </div>
+    </nav>
+    <br>
+
+    <router-outlet></router-outlet>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
